# aut

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: events.py
backend/app/core/: config.py
frontend/: babel.config.js  package.json  tsconfig.json
frontend/src/components/: EventCard.tsx  ViewTypeSelector.tsx
frontend/src/navigation/: AppNavigator.tsx  types.ts
frontend/src/screens/: CalendarScreen.tsx  FollowingScreen.tsx
frontend/src/theme/: index.ts
